features: Checkpoint (caching!)

--- a/features/scratch.ipynb
+++ b/features/scratch.ipynb
@@ -88,6 +88,26 @@
     "[s.set_visible(False) for s in plt.gca().spines.values()]\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dask\n",
+    "import dask.bag\n",
+    "import dask.dataframe as dd\n",
+    "\n",
+    "dask.set_options(scheduler='processes')\n",
+    "\n",
+    "df = pd.DataFrame({'a':range(10,20), 'b':range(20,30)}); df\n",
+    "\n",
+    "ddf = dd.from_pandas(df, npartitions=8)\n",
+    "ddf.apply?\n",
+    "\n",
+    "dask.bag.from_sequence(range(100)).compute()"
+   ]
   }
  ],
  "metadata": {
