--- a/features/scratch.ipynb
+++ b/features/scratch.ipynb
@@ -108,13 +108,44 @@
     "\n",
     "dask.bag.from_sequence(range(100)).compute()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(\n  Field(name='dataset',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='name',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='species',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='species_query',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='basename',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='duration_s',type=<class 'float'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='samples_mb',type=<class 'float'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='samples_n',type=<class 'int'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='samples',type=<class 'int'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='audio',type=<class 'audiosegment.AudioSegment'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n)"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datatypes import Recording\n",
+    "from load import *\n",
+    "\n",
+    "recs_paths = load_recs_paths(['recordings-new'])\n",
+    "row = recs_paths.iloc[0]\n",
+    "rec = load_rec(row.dataset, row.path)\n",
+    "\n",
+    "import dataclasses\n",
+    "dir(dataclasses)\n",
+    "\n",
+    "# load_recs_data(recs_paths)\n",
+    "\n",
+    "dataclasses.asdict(rec)\n",
+    "dataclasses.fields(rec)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
