--- a/features/notebooks/20180516_inspect_dataset_mlsp-2013.ipynb
+++ b/features/notebooks/20180516_inspect_dataset_mlsp-2013.ipynb
@@ -399,7 +399,7 @@
     "    .pipe(ggplot, aes(x='code'))\n",
     "    + geom_bar()\n",
     "    + coord_flip()\n",
-    "    + xlab('species code')\n",
+    "    + xlab('species')\n",
     "    + ylab('num recordings')\n",
     "    + ggtitle('How many training recordings per species? (multiple species per recording)')\n",
     ")"
@@ -999,9 +999,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
