--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -139,6 +139,26 @@
     "dataclasses.asdict(rec)\n",
     "dataclasses.fields(rec)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from potoo.plot import *\n",
+    "\n",
+    "# repr(ggplot(mpg) + geom_bar(aes(x='class')))\n",
+    "\n",
+    "theme_figsize('inline_short').rcParams\n",
+    "\n",
+    "figsize('inline_short');\n",
+    "# figsize('inline_short', dpi=72);\n",
+    "# figsize('inline_short', dpi=150);\n",
+    "\n",
+    "%time plt.plot(range(10)); display(plot_to_img())\n",
+    "%time plt.plot(range(10)); plt.show()"
+   ]
   }
  ],
  "metadata": {
