--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -159,6 +159,21 @@
     "%time plt.plot(range(10)); display(plot_to_img())\n",
     "%time plt.plot(range(10)); plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cache import *\n",
+    "\n",
+    "@cache(version=4)\n",
+    "def foo(x): return x+2\n",
+    "\n",
+    "foo(3)\n",
+    "foo(3, __cache_version=5)"
+   ]
   }
  ],
  "metadata": {
