features: Split Model -> Features + Projection + Search

--- a/features/notebooks/20180524_eval_classifiers.ipynb
+++ b/features/notebooks/20180524_eval_classifiers.ipynb
@@ -707,45 +707,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO Split Model -> Search contains Projection\n",
-    "\n",
-    "class Features:\n",
-    "    pass\n",
-    "\n",
-    "class Projection:\n",
-    "    pass\n",
-    "\n",
-    "class Search:\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# TODO Split models\n",
     "\n",
     "# Data\n",
     "recs = ...\n",
-    "recs_projection_train = ...\n",
-    "recs_train = ...\n",
-    "recs_test = ...\n",
     "\n",
     "# Basic features\n",
-    "features = Features(**patch_config)\n",
+    "features = Features()\n",
     "recs['spectro'] = features.spectros(recs)\n",
     "recs['patches'] = features.patches(recs)\n",
     "\n",
-    "# Fit projection, add final features\n",
-    "projection = Projection(**proj_skm_config, **agg_config)\n",
-    "projection.fit(recs_projection_train)\n",
+    "# Fit projection, add learned features\n",
+    "train_projection_n = 10\n",
+    "_shuf = sklearn.utils.shuffle(recs, random_state=0)\n",
+    "recs_train_projection = _shuf[:train_projection_n]\n",
+    "projection = Projection()\n",
+    "projection.fit(recs_train_projection)\n",
     "recs['feat'] = projection.transform(recs)\n",
     "\n",
     "# Fit search\n",
-    "search = Search(**class_knn_config)\n",
+    "train_n, test_n = 5, 5\n",
+    "_shuf = sklearn.utils.shuffle(recs, random_state=0)\n",
+    "recs_train, recs_test = _shuf[:train_n], _shuf[train_n : train_n + test_n]\n",
+    "search = Search()\n",
     "search.fit(recs_train)\n",
+    "\n",
+    "# Predict\n",
+    "search.predict(recs_test, 'classes')\n",
+    "search.predict(recs_test, 'kneighbors')\n",
     "\n",
     "# Eval search\n",
     "search.confusion_matrix(recs_test)\n",
