--- a/features/notebooks/20180530_dataset_xc.ipynb
+++ b/features/notebooks/20180530_dataset_xc.ipynb
@@ -6,22 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\n",
-    "\n",
-    "from potoo.plot import *\n",
-    "from potoo.util import *\n",
-    "import sklearn\n",
-    "\n",
-    "from cache import *\n",
-    "from constants import *\n",
-    "from datasets import *\n",
-    "from features import *\n",
-    "from load import *\n",
-    "from sp14.model import *\n",
-    "from util import *\n",
-    "from viz import *\n",
-    "\n",
-    "figsize('inline_short');"
+    "from notebooks import *"
    ]
   },
   {
@@ -152,7 +137,7 @@
    "source": [
     "(xc.metadata\n",
     "    .assign(n=1).groupby(['country'])['n'].count().reset_index()\n",
-    "    .pipe(df_ordered_cats, country=lambda df: df.sort_values('n').country)\n",
+    "    .pipe(df_ordered_cat, country=lambda df: df.sort_values('n').country)\n",
     "    .sort_values('country')[-20:]\n",
     "    .pipe(ggplot, aes(x='country', y='n'))\n",
     "    + geom_bar(stat='identity')\n",
@@ -193,7 +178,7 @@
    "source": [
     "(xc.metadata\n",
     "    .assign(n=1).groupby(['com_name'])['n'].count().reset_index()\n",
-    "    .pipe(df_ordered_cats, com_name=lambda df: df.sort_values('n').com_name.unique())\n",
+    "    .pipe(df_ordered_cat, com_name=lambda df: df.sort_values('n').com_name.unique())\n",
     "    .sort_values('com_name')[-20:]\n",
     "    .pipe(ggplot, aes(x='com_name', y='n'))\n",
     "    + geom_bar(stat='identity')\n",
@@ -235,7 +220,7 @@
     "(xc.metadata\n",
     "    [lambda df: df.country == 'United States']\n",
     "    .assign(n=1).groupby(['com_name'])['n'].count().reset_index()\n",
-    "    .pipe(df_ordered_cats, com_name=lambda df: df.sort_values('n').com_name)\n",
+    "    .pipe(df_ordered_cat, com_name=lambda df: df.sort_values('n').com_name)\n",
     "    .sort_values('com_name')[-20:]\n",
     "    .pipe(ggplot, aes(x='com_name', y='n'))\n",
     "    + geom_bar(stat='identity')\n",
@@ -378,9 +363,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
