--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from notebooks import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "joypy.joyplot(\n",
     "    # Perf: kind='kde' and kind='counts' are roughly the same\n",
@@ -178,9 +187,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
