--- a/features/notebooks/20180527_fit_projection.ipynb
+++ b/features/notebooks/20180527_fit_projection.ipynb
@@ -6,22 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\n",
-    "\n",
-    "from potoo.plot import *\n",
-    "from potoo.util import *\n",
-    "import sklearn\n",
-    "\n",
-    "from cache import *\n",
-    "from constants import *\n",
-    "from datasets import *\n",
-    "from features import *\n",
-    "from load import *\n",
-    "from sp14.model import *\n",
-    "from util import *\n",
-    "from viz import *\n",
-    "\n",
-    "figsize('inline_short');"
+    "from notebooks import *"
    ]
   },
   {
