--- a/features/notebooks/20180529_perf_transform.ipynb
+++ b/features/notebooks/20180529_perf_transform.ipynb
@@ -6,22 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\n",
-    "\n",
-    "from potoo.plot import *\n",
-    "from potoo.util import *\n",
-    "import sklearn\n",
-    "\n",
-    "from cache import *\n",
-    "from constants import *\n",
-    "from datasets import *\n",
-    "from features import *\n",
-    "from load import *\n",
-    "from sp14.model import *\n",
-    "from util import *\n",
-    "from viz import *\n",
-    "\n",
-    "figsize('inline_short');"
+    "from notebooks import *"
    ]
   },
   {
@@ -1166,7 +1151,7 @@
     "        # dict(override_scheduler='processes'),\n",
     "    ]:\n",
     "        print('dask_opts:', _dask_opts)\n",
-    "        with dask_opts.context(**_dask_opts):\n",
+    "        with dask_opts(**_dask_opts):\n",
     "            n = 100\n",
     "            # %prun -l5 recs[:n].drop(columns=['audio'], errors='ignore').assign(audio=load.audio)\n",
     "            # %prun -l5 recs[:n].drop(columns=['spectro'], errors='ignore').assign(spectro=features.spectro)\n",
@@ -1192,9 +1177,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
