--- a/features/notebooks/20180530_dataset_birdclef.ipynb
+++ b/features/notebooks/20180530_dataset_birdclef.ipynb
@@ -6,22 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\n",
-    "\n",
-    "from potoo.plot import *\n",
-    "from potoo.util import *\n",
-    "import sklearn\n",
-    "\n",
-    "from cache import *\n",
-    "from constants import *\n",
-    "from datasets import *\n",
-    "from features import *\n",
-    "from load import *\n",
-    "from sp14.model import *\n",
-    "from util import *\n",
-    "from viz import *\n",
-    "\n",
-    "figsize('inline_short');"
+    "from notebooks import *"
    ]
   },
   {
@@ -140,13 +125,20 @@
     "\n",
     "f(recs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
