features: Comparing classifiers...

--- a/features/notebooks/20180524_fit_search.ipynb
+++ b/features/notebooks/20180524_fit_search.ipynb
@@ -357,7 +357,7 @@
     "    .pipe(ggplot, aes(x='species', y='coverage_error'))\n",
     "    + geom_point()\n",
     "    + coord_flip()\n",
-    "    + geom_hline(yintercept=len(set(search.fit_classes_)), color='grey')\n",
+    "    + geom_hline(yintercept=len(search.classes_), color='grey')\n",
     "    + theme_figsize('inline')\n",
     "    + ggtitle('Coverage error by species')\n",
     ")"
@@ -395,7 +395,7 @@
    ],
    "source": [
     "%%time\n",
-    "with with_figsize('full'):\n",
+    "with figsize('full'):\n",
     "    search.plot_confusion_matrix(recs_test)"
    ]
   },
@@ -421,9 +421,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
