--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -183,13 +183,76 @@
     "foo(3)\n",
     "foo(3, __cache_version=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import zict\n",
+    "\n",
+    "f = zict.Func(pickle.dumps, pickle.loads, zict.File('/tmp/zict-0/'))\n",
+    "d = zict.LRU(\n",
+    "    n=2,\n",
+    "    d=f,\n",
+    "    on_evict=lambda k, v: print('evict: %s:%s' % (k, v)),\n",
+    "    weight=lambda k, v: 1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import zict\n",
+    "from zict_util import PersistentBuffer\n",
+    "\n",
+    "a = {}\n",
+    "b = zict.Func(pickle.dumps, pickle.loads, zict.File('/tmp/zict-0/'))\n",
+    "d = PersistentBuffer(\n",
+    "    fast=a,\n",
+    "    slow=b,\n",
+    "    n=2,\n",
+    "    weight=lambda k, v: 1,\n",
+    "    evict_fast_callbacks=[lambda k, v: print('evict_fast: %s:%s' % (k, v))],\n",
+    "    load_fast_callbacks=[lambda k, v: print('load_fast: %s:%s' % (k, v))],\n",
+    ")\n",
+    "\n",
+    "show = lambda: print('fast[%s], slow[%s]' % (dict(d.fast), dict(d.slow)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show()\n",
+    "d['x'] = 1; show()\n",
+    "d['y'] = 2; show()\n",
+    "d['z'] = 3; show()\n",
+    "d['y']; show()\n",
+    "d['x']; show()\n",
+    "d['x'] = -1; show()\n",
+    "d['z']; show()\n",
+    "d['x'] = 1; show()\n",
+    "d['y'] = -2; show()\n",
+    "d['y']; show()\n",
+    "d['x']; show()\n",
+    "d['z']; show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
