features/notebooks/compare_classifiers: Structure done!

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -246,6 +246,39 @@
     "d['x']; show()\n",
     "d['z']; show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = DF(dict(a=[1,2,3],b=[4,5,6]))\n",
+    "df.loc[:2, ['a']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = DF(dict(a=[{'b':2}]))\n",
+    "df.a.str['b']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(mpg\n",
+    "    .pipe(ggplot)\n",
+    "    + geom_violin(aes(x='drv', y='hwy'))\n",
+    "    + facet_wrap('model')\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
