--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -266,13 +266,47 @@
     "df = DF(dict(a=[{'b':2}]))\n",
     "df.a.str['b']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "list(Path('data').joinpath('xc').glob('*'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "\n",
+    "'foo.bar/baz.ext'.rsplit('.', 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "2.323s"
+   },
+   "outputs": [],
+   "source": [
+    "%%prun -l50 -scumtime\n",
+    "pp(Load().recs_paths(['xc']).shape)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
