--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -122,16 +122,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(\n  Field(name='dataset',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='name',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='species',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='species_query',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='basename',type=<class 'str'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='duration_s',type=<class 'float'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='samples_mb',type=<class 'float'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='samples_n',type=<class 'int'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='samples',type=<class 'int'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n  Field(name='audio',type=<class 'audiosegment.AudioSegment'>,default=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,default_factory=<dataclasses._MISSING_TYPE object at 0x12621d4e0>,init=True,repr=True,hash=None,compare=True,metadata={}),\n)"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datatypes import Recording\n",
     "from load import *\n",
@@ -300,6 +291,422 @@
     "%%prun -l50 -scumtime\n",
     "pp(Load().recs_paths(['xc']).shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO Debug pickle error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "1.05s"
+   },
+   "outputs": [],
+   "source": [
+    "from notebooks import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.Series(\n",
+    "#     map_progress(lambda x: os.getpid(), range(10), use='dask', scheduler='processes', get_kwargs=dict(num_workers=7))\n",
+    "# ).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load = Load()\n",
+    "# recs_all = load.recs(limit=500, datasets=['xc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##\n",
+    "# TODO Under par: only ~15-20% total cpu on n1-standard-16\n",
+    "recs_paths_all = load.recs_paths(datasets=['xc'])\n",
+    "# load.audio_to_wav(recs_paths_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{\n  'width': 12,\n  'height': 8.0,\n  'aspect_ratio': 0.6666666666666666,\n  'dpi': 72,\n  '_figure_format': 'retina',\n  '_Rdefaults': '--width=12 --height=8.0 --units=in --res=144'\n}"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_figsize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "2.125s"
+   },
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "logging.basicConfig(level=logging.DEBUG)\n",
+    "import gcsfs\n",
+    "\n",
+    "gs = gcsfs.GCSFileSystem(project='bubo-1')\n",
+    "# gs.ls('bubo-data/v0/data/xc/data')[:10]\n",
+    "gs.walk('bubo-data/v0/data/xc/data/TUVU/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['bubo-data', 'date']"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:__del__(args=(), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:close(args=(), kwargs={})\n"
+    }
+   ],
+   "source": [
+    "gcsfs.core.split_path( 'gs://bubo-data/date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:open(args=('gs://bubo-data/date', 'w', None, None, None, None), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:__init__(args=(<gcsfs.core.GCSFileSystem object at 0x11c102da0>, 'gs://bubo-data/date', 'wb', 5242880, None, 'none', None), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:flush(args=(False,), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:flush(force=False) with buffer (3) < min size (2 ** 18), skipping block upload.\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:close(args=(), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:flush(args=(True,), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_simple_upload(args=(), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:urllib3.connectionpool:https://www.googleapis.com:443 \"POST /upload/storage/v1/b/bubo-data/o?uploadType=media&name=date HTTP/1.1\" 200 647\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:invalidate_cache(args=('bubo-data',), kwargs={})\n"
+    }
+   ],
+   "source": [
+    "with gs.open('gs://bubo-data/date', 'w') as f:\n",
+    "    f.write('foo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:open(args=('gs://bubo-data/date', 'rb', None, None, None, None), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:__init__(args=(<gcsfs.core.GCSFileSystem object at 0x11c102da0>, 'gs://bubo-data/date', 'rb', 5242880, None, 'none', None), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:info(args=('gs://bubo-data/date',), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_get_object(args=('gs://bubo-data/date',), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_maybe_get_cached_listing(args=('bubo-data//',), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_maybe_get_cached_listing: bubo-data//\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_call(args=('get', 'b/{}/o/{}', 'bubo-data', 'date'), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:urllib3.connectionpool:https://www.googleapis.com:443 \"GET /storage/v1/b/bubo-data/o/date HTTP/1.1\" 200 647\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_fetch(args=(0, 3), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_fetch_range(args=(<google.auth.transport.requests.AuthorizedSession object at 0x11c162cc0>, 0, 5242883), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:urllib3.connectionpool:https://www.googleapis.com:443 \"GET /download/storage/v1/b/bubo-data/o/date?generation=1530128395796535&alt=media HTTP/1.1\" 206 3\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:__del__(args=(), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:close(args=(), kwargs={})\n"
+    },
+    {
+     "data": {
+      "text/plain": "b'foo'"
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs.open('gs://bubo-data/date').read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "20.304s"
+   },
+   "outputs": [],
+   "source": [
+    "gs.glob('bubo-data/v0/data/xc/data/WIWA/**')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import storage\n",
+    "client = storage.Client()\n",
+    "bucket = client.get_bucket('bubo-data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{\n  'apply': <bound method Credentials.apply of <google.oauth2.credentials.Credentials object at 0x118f3c5f8>>,\n  'before_request': <bound method Credentials.before_request of <google.oauth2.credentials.Credentials object at 0x118f3c5f8>>,\n  'client_id': '764086051850-6qr4p6gpi6hn506pt8ejuq83di341hur.apps.googleusercontent.com',\n  'client_secret': 'd-FL95Q19q7MQmFpd7hHD0Ty',\n  'expired': True,\n  'expiry': datetime.datetime(year=2018, month=6, day=27, hour=20, minute=1, second=34, microsecond=619230),\n  'from_authorized_user_file': <bound method Credentials.from_authorized_user_file of <class 'google.oauth2.credentials.Credentials'>>,\n  'from_authorized_user_info': <bound method Credentials.from_authorized_user_info of <class 'google.oauth2.credentials.Credentials'>>,\n  'has_scopes': <bound method ReadOnlyScoped.has_scopes of <google.oauth2.credentials.Credentials object at 0x118f3c5f8>>,\n  'id_token':\n    'eyJhbGciOiJSUzI1NiIsImtpZCI6IjRlZjUxMThiMDgwMGJkNjBhNDE5NDE4NmRjYjUzOGZjNjZlNWViMzQifQ.'\n    'eyJhenAiOiI3NjQwODYwNTE4NTAtNnFyNHA2Z3BpNmhuNTA2cHQ4ZWp1cTgzZGkzNDFodXIuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdW'\n    'QiOiI3NjQwODYwNTE4NTAtNnFyNHA2Z3BpNmhuNTA2cHQ4ZWp1cTgzZGkzNDFodXIuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIx'\n    'MDY2MTY1OTc2MTQ2NDU4MjYxOTMiLCJlbWFpbCI6ImpkYW5icm93bkBnbWFpbC5jb20iLCJlbWFpbF92ZXJpZmllZCI6dHJ1ZSwiYXRfaGFzaCI6Ij'\n    'V0Y3JwWUJXMFhoS2ZzeDZkS29mRGciLCJleHAiOjE1MzAxMjk2OTQsImlzcyI6ImFjY291bnRzLmdvb2dsZS5jb20iLCJpYXQiOjE1MzAxMjYwOTR9'\n    '.jNHoD81z-YSdwnQ10tMELWFOvS7ObKFmGmwtNuOnsldyO42yf0sMdg4n5cqF1CP9kEsSgAA_hv2F-'\n    'K1y5rx82NyT34sHMXxfBOqK2aMKw47dHsQqBpEo5exsnDgPmYYGNmiQvhwi6ECHaS2lboaMsB-'\n    '3xTgCvO4KVLK7eED24aqyPFKSIE0Z8OzUWt1rKxjNGvAOh80w7PcakdhGRoIwQ8Hz3C03xSnQmZ6pN5sESMzrBGfvcdS_x_YjV8RKaoq1ekRF6FW7F'\n    '2PmedbU4inU_55i5ZZUvOCWNB4-AfSJmbEPGgqv_WLN-05s7sYyaW83jHqX0sz4SPZxmbKEB9Lsbg',\n  'refresh': <bound method Credentials.refresh of <google.oauth2.credentials.Credentials object at 0x118f3c5f8>>,\n  'refresh_token': '1/wg1zIBcvB9QmO6Ng5b-FWwH3IzSh_zxp_Ke57mUCgV0',\n  'requires_scopes': False,\n  'scopes': None,\n  'token':\n    'ya29.GlznBd-rRw1GKZwWPIjuax-bAJstTf0uXfJMWyb9z5r-'\n    'J64NuDKBLrW6_VqH3S_Mbhv1IgAATiKHZEhvjDOqohnN3bVuHTtgw7PgEsxL4U_UXPLHfu2Q5JmysLHKNg',\n  'token_uri': 'https://accounts.google.com/o/oauth2/token',\n  'valid': False\n}"
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:ls(args=('bubo-data', False), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_ls(args=('bubo-data/', False), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_list_objects(args=('bubo-data/',), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_maybe_get_cached_listing(args=('bubo-data/',), kwargs={})\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:gcsfs.core:_maybe_get_cached_listing: bubo-data/\n"
+    },
+    {
+     "data": {
+      "text/plain": "['bubo-data/date', 'bubo-data/v0/']"
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcsfs.GCSFileSystem(project='bubo-1', token=client._credentials).ls('bubo-data')\n",
+    "dirs(client._credentials)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:urllib3.connectionpool:https://www.googleapis.com:443 \"GET /storage/v1/b/bubo-data/o?projection=noAcl&prefix=v0%2Fdata%2Fxc%2Fdata%2FSOSP%2F&fields=items%2Fname%2CnextPageToken HTTP/1.1\" 200 60026\n"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "DEBUG:urllib3.connectionpool:https://www.googleapis.com:443 \"GET /storage/v1/b/bubo-data/o?pageToken=CiV2MC9kYXRhL3hjL2RhdGEvU09TUC8zNjI1MTQvcGFnZS5odG1s&projection=noAcl&prefix=v0%2Fdata%2Fxc%2Fdata%2FSOSP%2F&fields=items%2Fname%2CnextPageToken HTTP/1.1\" 200 17664\n"
+    },
+    {
+     "data": {
+      "text/plain": "1296"
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blobs = [x for x in bucket.list_blobs(prefix='v0/data/xc/data/SOSP/',\n",
+    "    fields='items/name,nextPageToken',\n",
+    ")]\n",
+    "len(blobs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "gcsfs.core.split_path  # function"
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcsfs.core.split_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[x.name for x in blobs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "13.431s"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "129449"
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "from datasets import xc\n",
+    "len(list(xc.data_dir.glob('*/*/audio.mp3')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
