--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -705,6 +705,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[attrdict.dictionary.AttrDict({'a': 1, 'b': 'foo'}), attrdict.dictionary.AttrDict({'a': 2, 'b': 'bar'})]"
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from util import df_rows\n",
+    "from more_itertools import *\n",
+    "list(unique_everseen(AttrDict(row) for row in df_rows(DF(dict(a=[1,2,2], b=['foo','bar','bar'])))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[1, 2, 3, 0, 1, 2, 3, 4]"
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xs = [1,2,3]\n",
+    "xs.extend(x for x in range(5))\n",
+    "xs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
