--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -746,6 +746,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print_sys_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
