--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -754,6 +754,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "args:\n{\n  'X_shape': (20,),\n  'y_shape': (20,),\n  'n': 20,\n  'frac': 1.0,\n  'replace': False\n}\n"
+    },
+    {
+     "data": {
+      "text/plain": "(\n  array([ 3, 15,  9, 12, 13,  1,  5,  0, 16,  7, 10, 14, 11, 17,  8,  4,  2, 18,  6, 19]),\n  array(['a', 'd', 'c', 'd', 'd', 'a', 'b', 'a', 'e', 'b', 'c', 'd', 'c', 'e', 'c', 'b', 'a', 'e', 'b', 'e'], dtype='<U1')\n)"
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from potoo.numpy import *\n",
+    "from util import *\n",
+    "np_sample_stratified(\n",
+    "    X=np.arange(20),\n",
+    "    y=list(flatten([c] * 4 for c in 'abcde')),\n",
+    "    # n=1,\n",
+    "    n=20,\n",
+    "    # frac=1.0,\n",
+    "    # frac=0.6,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
