Tradeoffs: multiclass RF vs. OVR(RF)

--- a/features/notebooks/20180705_eval_rf_superlinear_model_size~n_species.ipynb
+++ b/features/notebooks/20180705_eval_rf_superlinear_model_size~n_species.ipynb
@@ -96,7 +96,7 @@
     "#   5. num_recs: Sample this many recs per species\n",
     "get_recs_stats = lambda df: dict(sp=df.species.nunique(), recs=len(df))\n",
     "puts_stats = lambda desc: partial(tap, f=lambda df: print('%-15s %12s (sp/recs)' % (desc, '%(sp)s/%(recs)s' % get_recs_stats(df))))\n",
-    "countries, com_names = countries_na, com_names_ca  # 400k/9.4k -> 60k/1.1k -> 35k/334\n",
+    "countries, com_names = countries_na, com_names_ca  # 9.4k/400k -> 1.1k/60k -> 334/35k\n",
     "# recs_at_least, num_species, num_recs = 100, 100, 100  # ca[334/35k -> 127/25k -> 100/21k -> 100/10k   -> 100/10k]\n",
     "# recs_at_least, num_species, num_recs =  50, 100, 100  # ca[334/35k -> 224/32k -> 100/16k -> 100/ 9.0k -> 100/ 9.0k]\n",
     "# recs_at_least, num_species, num_recs =   0, 100, 100  # ca[334/35k -> 334/35k -> 100/12k -> 100/ 6.8k ->  99/ 6.8k]\n",
@@ -1810,9 +1810,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
